[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Shield/Shield.gd" type="Script" id=1]
[ext_resource path="res://Player/Shield/Sprite/shield.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "animate"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 47.1348

[node name="Shield" type="Area2D" groups=[
"shield",
]]
collision_layer = 64
collision_mask = 40
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DurabilityTimer" type="Timer" parent="."]

[node name="Animation" type="Node" parent="."]

[node name="AnimationTimer" type="Timer" parent="Animation"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]
anims/animate = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Shield_area_entered"]
[connection signal="timeout" from="DurabilityTimer" to="." method="_on_Durability_timer_timeout"]
[connection signal="timeout" from="Animation/AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
